--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MoveMapMarker</string>
     <string name="title_activity_maps">Map</string>
+    <string name="view_model_lat_lon_lat_title">Lat :</string>
+    <string name="view_model_lat_lon_lon_title">Lon :</string>
 </resources>
