add empty state

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_maps">Map</string>
     <string name="view_model_lat_lon_lat_title">Lat :</string>
     <string name="view_model_lat_lon_lon_title">Lon :</string>
+    <string name="list_is_empty">List is empty</string>
 </resources>
